--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,7 @@ include ':modules:ui_categories'
 include ':modules:datasource_categories'
 include ':modules:di_module'
 include ':modules:resource_module'
+include ':modules:delegate_adapter'
+include ':modules:ui_dishes'
+include ':modules:dishes_datasourse'
+include ':modules:datasource_dishes'
