--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
     id "org.jetbrains.kotlin.kapt" version "1.8.21"
+    id 'org.jetbrains.kotlin.jvm' version '1.8.20' apply false
 }
 
 
