--- a/modules/datasource_categories/build.gradle
+++ b/modules/datasource_categories/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':modules:delegate_adapter')
+
     //Retrofit 2
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
