--- a/modules/ui_categories/build.gradle
+++ b/modules/ui_categories/build.gradle
@@ -29,11 +29,19 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
     implementation project(path: ':modules:datasource_categories')
     implementation project(path: ':modules:resource_module')
+    implementation project(path: ':modules:di_module')
+    implementation project(path: ':modules:delegate_adapter')
+
+    //COIL
+    implementation("io.coil-kt:coil:2.4.0")
 
     //Dagger 2
     implementation 'com.google.dagger:dagger:2.43.2'
