add dishes fragment

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ dependencyResolutionManagement {
 }
 rootProject.name = "Just Another Recipes"
 include ':app'
+include ':modules:location_module'
 include ':modules:ui_categories'
 include ':modules:datasource_categories'
 include ':modules:di_module'
