--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,5 @@ include ':modules:delegate_adapter'
 include ':modules:ui_dishes'
 include ':modules:dishes_datasourse'
 include ':modules:datasource_dishes'
+include ':modules:ui_details'
+include ':modules:ui_cart'
