--- a/modules/di_module/build.gradle
+++ b/modules/di_module/build.gradle
@@ -32,12 +32,21 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':modules:datasource_cart')
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    //room
+    implementation "androidx.room:room-runtime:2.5.1"
+    implementation "androidx.room:room-paging:2.5.1"
+    kapt "androidx.room:room-compiler:2.5.1"
+    implementation "androidx.room:room-ktx:2.5.1"
+    implementation "androidx.room:room-rxjava2:2.5.1"
 
     //dagger
     implementation 'com.google.dagger:dagger:2.43.2'
