--- a/modules/ui_details/build.gradle
+++ b/modules/ui_details/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     //Dagger 2
     implementation 'com.google.dagger:dagger:2.43.2'
+    implementation project(path: ':modules:datasource_cart')
     kapt 'com.google.dagger:dagger-compiler:2.43.2'
 
     implementation 'androidx.core:core-ktx:1.8.0'
