--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,7 @@ include ':modules:di_module'
 include ':modules:resource_module'
 include ':modules:delegate_adapter'
 include ':modules:ui_dishes'
-include ':modules:dishes_datasourse'
 include ':modules:datasource_dishes'
 include ':modules:ui_details'
 include ':modules:ui_cart'
+include ':modules:datasource_cart'
